--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=NS8w1W"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=NS8w1W" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=eGPWaI"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=eGPWaI" type="text/css">
 
   
   
@@ -500,7 +500,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="3ACnkdBFkE0/j2IBEDPpryH6w7i3z9Mg5K9b98wIkn+/oUx1G2ukUYJwqAr7H/IWBUPzyuGAJ2A9Ji9biQSnnMfSBR/6FadgCmc/0v+40dcpFtp/wfjsit6FPl3c+0jo">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="qe4cUZigmYfRq8yqPhXymwW5UHvJPiKXlaN53HfrrhgBcsDboNlWkiYdrLF/gOcvRYSklvHffB85kLvS7PP+34oytfFZpVtjYz1jVW38Uvpg0tE7D0/jyxVgASHJIT9w">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
