--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=eGPWaI"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=eGPWaI" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=BLhsib"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=BLhsib" type="text/css">
 
   
   
@@ -144,7 +144,7 @@ a,a:hover,a:visited{color:#ddd;text-decoration:none;}
       <li><span class="simp-source" data-src="https://kuvo-ice.streamguys1.com/kuvo-mp3-128">2. Radio Jazz Music<span class="simp-desc">Jazz Music USA</span></span></li>
       <li><span class="simp-source" data-src="https://countryhits.radioca.st/stream">3. Radio Country Music<span class="simp-desc">Country USA</span></span></li>
       <li><span class="simp-source" data-src="https://uk4-vn.mixstream.net/:8128/listen.mp3">4. Radio House Music<span class="simp-desc">House Music USA</span></span></li>
-      <li><span class="simp-source" data-src="http://api.spreaker.com/listen/show/2829143/episode/latest/shoutcast.mp3">5. News USA<span class="simp-desc">News USA</span></span></li>
+      <li><span class="simp-source" data-src="https://playerservices.streamtheworld.com/api/livestream-redirect/NEWSMAX_FM.aac">5. Radio Newsmax USA<span class="simp-desc">News USA</span></span></li>
     </ul>
   </div>
 </div>    
@@ -500,7 +500,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="qe4cUZigmYfRq8yqPhXymwW5UHvJPiKXlaN53HfrrhgBcsDboNlWkiYdrLF/gOcvRYSklvHffB85kLvS7PP+34oytfFZpVtjYz1jVW38Uvpg0tE7D0/jyxVgASHJIT9w">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="GBGxUkwdLvaEbdPinehn/LnaSq2eIycL6lcjIINOvjtDGLCIQwKPqMj9MG9Z1aVWQiXGcFd5eeuBPhxDtuZDJKFIwv560T0BDJDf4pF9YPHeha4RtLBvBIg0yC1POR9j">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
