--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=Bqsy16"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=Bqsy16" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=iW721v"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=iW721v" type="text/css">
 
   
   
@@ -131,7 +131,9 @@ a,a:hover,a:visited{color:#ddd;text-decoration:none;}
 
       --- Spanish: ----------
       
+      <li><span class="simp-source" data-src="https://stream.zeno.fm/sxn8jnkteq2vv">1. Radio Flamenco</span><span class="simp-desc">Spanish Music</span></li>
       <li><span class="simp-source" data-src="https://kissfm.kissfmradio.cires21.com/kissfm.mp3">1. Radio Kiss FM</span><span class="simp-desc">Spanish Music</span></li>
+      <li><span class="simp-source" data-src="http://playerservices.streamtheworld.com/api/livestream-redirect/RADIOLE.mp3">1. Radio OLE</span><span class="simp-desc">Spanish Music</span></li>
       <li><span class="simp-source" data-src="https://playerservices.streamtheworld.com/api/livestream-redirect/LOS40_ASO_GUADIX.mp3">2. Radio Los 40 Guadix Madrid</span><span class="simp-desc">Spanish Music</span></li>
       <li><span class="simp-source" data-src="http://server8.emitironline.com:18176/">3. Radio Callao Madrid<span class="simp-desc">Spanish Music</span></span></li>
       <li><span class="simp-source" data-src="https://net1-cope-rrcast.flumotion.com/cope/net1-low.mp3">4. Radio COPE Madrid</span><span class="simp-desc">Spanish Music and News</span></li>
@@ -500,7 +502,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="l3gcG5Zx9hjNN6gn2YiHbh82efXmn8Qikt3nD3NUVk6GG919kwwIDIxuG/Oe96VXVm6PENowx8VjuZvAgkElZHhNd8XDKH6JRmfpQRkkcsc9NjdjUWwIU2ipcyeURmwI">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="vMFl1cvUZH2PtdSKfQ6KLa+wLeqFFCrk86xFjf+03qptWEhqIsInnLbSAuYPPRQOhPnLdxdjV6qzSF0G4PwwkqgMWdugDvvFVrggL+PaZWpvHg0jp7m/1f90bTGx+SAl">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
