--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=mrbBM1"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=mrbBM1" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=nVBFnf"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=nVBFnf" type="text/css">
 
   
   
@@ -134,7 +134,7 @@ a,a:hover,a:visited{color:#ddd;text-decoration:none;}
       <li><span class="simp-source" data-src="https://stream.zeno.fm/sxn8jnkteq2vv">1. Radio Flamenco</span><span class="simp-desc">Spanish Music</span></li>
       <li><span class="simp-source" data-src="http://playerservices.streamtheworld.com/api/livestream-redirect/RADIOLE.mp3">2. Radio OLE</span><span class="simp-desc">Spanish Music</span></li>
       <li><span class="simp-source" data-src="https://kissfm.kissfmradio.cires21.com/kissfm.mp3">3. Radio Kiss FM</span><span class="simp-desc">Spanish Music</span></li>
-      <li><span class="simp-source" data-src="https://playerservices.streamtheworld.com/api/livestream-redirect/LOS40_ASO_GUADIX.mp3">4. Radio Los 40 Guadix Madrid</span><span class="simp-desc">Spanish Music</span></li>
+      <li><span class="simp-source" data-src="https://playerservices.streamtheworld.com/api/livestream-redirect/LOS40_ASO_GUADIX.mp3">4. Radio Los 40 Madrid</span><span class="simp-desc">Spanish Music</span></li>
       <li><span class="simp-source" data-src="http://server8.emitironline.com:18176/">5. Radio Callao Madrid<span class="simp-desc">Spanish Music</span></span></li>
       <li><span class="simp-source" data-src="https://net1-cope-rrcast.flumotion.com/cope/net1-low.mp3">6. Radio COPE Madrid</span><span class="simp-desc">Spanish Music and News</span></li>
       <li><span class="simp-source" data-src="https://playerservices.streamtheworld.com/api/livestream-redirect/SER_MAS_MADRID.mp3">7. Radio SER + Madrid<span class="simp-desc">Spanish News</span></span></li>
@@ -142,7 +142,7 @@ a,a:hover,a:visited{color:#ddd;text-decoration:none;}
 
       --- English: ----------
 
-      <li><span class="simp-source" data-src="https://ais-edge50-live365-dal02.cdnstream.com/a26045">1. Radio CALIFORNIA MUSIC<span class="simp-desc">Music USA</span></span></li>
+      <li><span class="simp-source" data-src="https://stream.airconnectradio.com/ac192.mp3">1. Radio Air Connect<span class="simp-desc">Music USA</span></span></li>
       <li><span class="simp-source" data-src="https://kuvo-ice.streamguys1.com/kuvo-mp3-128">2. Radio Jazz Music<span class="simp-desc">Jazz Music USA</span></span></li>
       <li><span class="simp-source" data-src="https://countryhits.radioca.st/stream">3. Radio Country Music<span class="simp-desc">Country USA</span></span></li>
       <li><span class="simp-source" data-src="https://uk4-vn.mixstream.net/:8128/listen.mp3">4. Radio House Music<span class="simp-desc">House Music USA</span></span></li>
@@ -502,7 +502,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="BJFgrIki1nHbTfuHrCuk+bvyBSwDge/wjHYVoRPPOmQDNRMpqVd1rBr2pszlW0CIxtfmhZkvBSbqZAIpYXodcggZdrIp9LD/FBmwDhwQlTFZAUQ54eKnSYZhRvvgR9RH">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="sqel2qOuPmX3axcReZeGpL9nCKf0p7JWOZCY8cxB71tMEQTSto/VIfBO4FFaDhmKQnVBf4yBFs+TxzzqvXDNLpPqRpBD8tMrWPHvUmGXOGlfGdHhWlYTyM+k/EQmDx1U">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
