--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=nVBFnf"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=nVBFnf" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=g0vdOT"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=g0vdOT" type="text/css">
 
   
   
@@ -502,7 +502,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="sqel2qOuPmX3axcReZeGpL9nCKf0p7JWOZCY8cxB71tMEQTSto/VIfBO4FFaDhmKQnVBf4yBFs+TxzzqvXDNLpPqRpBD8tMrWPHvUmGXOGlfGdHhWlYTyM+k/EQmDx1U">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="YV1tFlt+ILvV7mB0wRazhCC+CCGwRHljrRHtWSRKJl79xA0gkUygcRRy1BIZRhKvqmMj8sqHPYuZEwk9S9gLxfQ3Tn9o3VWpgcEPScGif0YxTKmsLJNpUo1KBKyFx2CO">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
