--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=wTTxq5"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=wTTxq5" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=51Pr8V"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=51Pr8V" type="text/css">
 
   
   
@@ -491,15 +491,14 @@ if (document.querySelector('#simp')) {
             <div class="col-12 content-head">
                 <div class="mbr-section-head mb-5">
                     <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                        <strong>Contacts</strong>
-                    </h3>
+                        <strong>Contact</strong></h3>
                     <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-4 display-7">Leave a comment for Radio Garousi. Thank you! Enjoy !</h4>
                 </div>
             </div>
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="GE+CrmgXiMKZQVFe/Pv4zXfkCwqjhBCTsHssgXSxoYA3yGwBjiYVvdYWFwrQ74S+fjALhyTxS3btxHva0QKYK6KDAk9xK9aQ/xa5xmoUD4zDEmG+ZCuB5QGCG55Azio3">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="b+uAU2ckaMReeOfcsMrKvKLSF+R9z0jX2UKLAwTrWiQb0hfOPAfkHcNu8OKhrPes+Y9XDBu3CuFrDpwOnpS4pHz+NOjzLRPi3Ypq22VwShlVTsplD9A8/Avc/iB4ljgq">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
